Fixed layout issue with large screens

--- a/app/scss/_misc.scss
+++ b/app/scss/_misc.scss
@@ -148,7 +148,7 @@
     .view-mode-flex-wrapper {
       display: flex;
       justify-content: flex-end;
-      max-width: 80.7rem;
+      max-width: 80.755rem;
       width: 100%;
       .view-mode-wrapper {
         position: relative;
